# dmstodeg

./: .gitignore  CMakeLists.txt  README.md  VERSIONLOG.md  build_number.hpp  config.h.in
include/: config.h
resources/img/: appinfo.h  dmstodeg.rc
src/: aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mathmodel.cpp  mathmodel.h
test/: CMakeLists.txt  test.cpp
